csc416/assignment_3/tests/pass/arrays.ram15
/**
 * Test: Arrays
 * @author Marshall Bowers
 */
class Arrays {

    public static void main(String[] args) {
        int[] list;
        int i;
        int[] a;
        int[] b;
        int[] c;
        int[] d;
        int lengthA;

        i = 0;

        while (i < 5) {
            list[i] = i + 1;
        }

        a = list[1:3];       // [2, 3, 4]
        b = list[2:];        // [3, 4, 5]
        c = list[:3];        // [1, 2, 3, 4]
        d = list[:];         // [1, 2, 3, 4, 5]

        println(a.length);   // 3
        println(b.length);   // 3
        println(c.length);   // 4
        println(d.length);   // 5

        lengthA = a.length;

        println(lengthA);    // 3
    }

}
